--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/fchirchir/health_app/issues"
   },
-  "homepage": "https://github.com/fchirchir/health_app#readme"
+  "homepage": "https://github.com/fchirchir/health_app#readme",
+  "dependencies": {
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25",
+    "multer": "^1.4.2"
+  }
 }
